fix font flickering when adding font, add drop hint

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,12 @@
 @import "mui-overrides.scss";
 @import "react-colorful-overrides.scss";
 
-$red-to-blue: linear-gradient(
-  -45deg,
-  rgb(74, 65, 231) 0%,
-  rgb(233, 33, 109) 100%
-);
-$blue-to-red: linear-gradient(
-  -45deg,
-  rgb(233, 33, 109) 0%,
-  rgb(74, 65, 231) 100%
-);
+$red-to-blue: linear-gradient(-45deg,
+    rgb(74, 65, 231) 0%,
+    rgb(233, 33, 109) 100%);
+$blue-to-red: linear-gradient(-45deg,
+    rgb(233, 33, 109) 0%,
+    rgb(74, 65, 231) 100%);
 
 * {
   box-sizing: border-box;
@@ -20,6 +16,7 @@ html,
 body,
 #__next {
   min-width: 800px;
+  width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
@@ -47,19 +44,42 @@ h3 {
   position: fixed;
   z-index: 300;
   visibility: hidden;
+
+  &.dragover {
+    background-color: rgba(255, 255, 255, 0.6);
+    transition: background-color 0.3s ease;
+    visibility: visible !important;
+  }
 }
 
-.dragover {
-  // background-color: rgba(74, 65, 231, 0.2);
-  // background-color: rgba(233, 33, 109, 0.2);
-  background-color: rgba(255, 255, 255, 0.4);
-  transition: background-color 0.3s ease;
-  visibility: visible !important;
+#drop-indicator {
+  position: absolute;
+  z-index: 1001;
+  visibility: hidden;
+  animation: rotation 4s infinite linear;
+  pointer-events: none;
+
+  &.active {
+    visibility: visible;
+  }
+}
+
+.circular-text [style*=--index] {
+  font-family: monospace;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:
+    translate(-50%, -50%) rotate(calc(360deg / var(--total) * var(--index))) translateY(calc(var(--radius, 5) * -1ch));
 }
 
 #header {
   padding: 20px 20px 0;
   height: 62.5px;
+
   h1 {
     color: black;
     margin: 0;
@@ -67,13 +87,12 @@ h3 {
     font-size: 24px;
     text-align: right;
   }
+
   #line {
     height: 15px;
-    background: linear-gradient(
-      90deg,
-      rgb(74, 65, 231) 0%,
-      rgb(233, 33, 109) 100%
-    );
+    background: linear-gradient(90deg,
+        rgb(74, 65, 231) 0%,
+        rgb(233, 33, 109) 100%);
     width: 100%;
     border-bottom-right-radius: 20px;
     border-top-left-radius: 20px;
@@ -81,21 +100,21 @@ h3 {
 }
 
 .conic-gradient {
-  background: conic-gradient(
-    white 30deg,
-    #c1c1c1 140deg,
-    white 200deg,
-    #c8c8c8 300deg
-  );
+  background: conic-gradient(white 30deg,
+      #c1c1c1 140deg,
+      white 200deg,
+      #c8c8c8 300deg);
   width: 25px;
   height: 25px;
   border-radius: 50%;
   position: absolute;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+
   &.top {
     top: 5%;
     right: 5%;
   }
+
   &.bottom {
     bottom: 5%;
     left: 5%;
@@ -105,13 +124,11 @@ h3 {
 .gradient-bg {
   padding: 20px;
   border-radius: 25px;
-  background: linear-gradient(
-    -40deg,
-    white 0%,
-    lightgray 20%,
-    white 60%,
-    gray 100%
-  ) !important;
+  background: linear-gradient(-40deg,
+      white 0%,
+      lightgray 20%,
+      white 60%,
+      gray 100%) !important;
 }
 
 .sidebar {
@@ -121,9 +138,12 @@ h3 {
   margin-bottom: 0;
   padding: 10px;
   padding-bottom: 20px;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
   overflow: scroll;
+
   &::-webkit-scrollbar {
     display: none;
   }
@@ -145,6 +165,7 @@ h3 {
   flex-direction: row;
   height: 100%;
   max-height: calc(100% - 62.5px) !important;
+
   p,
   a,
   span,
@@ -162,20 +183,17 @@ h3 {
 
 .button-container,
 .select-container {
-  background: linear-gradient(
-    -20deg,
-    rgb(170, 170, 170) 0%,
-    white 100%
-  ) !important;
+  background: linear-gradient(-20deg,
+      rgb(170, 170, 170) 0%,
+      white 100%) !important;
   display: inline-block !important;
   padding: 5px !important;
   border-radius: 3px !important;
+
   &.active {
-    background: linear-gradient(
-      -225deg,
-      rgb(170, 170, 170) 0%,
-      white 100%
-    ) !important;
+    background: linear-gradient(-225deg,
+        rgb(170, 170, 170) 0%,
+        white 100%) !important;
   }
 }
 
@@ -210,6 +228,7 @@ h3 {
 .col2 {
   grid-template-columns: 1fr 1fr;
 }
+
 .col3 {
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -237,3 +256,14 @@ h3 {
 //   border-radius: 50%;
 //   color: white;
 // }
+
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
